[tool.poetry]
name = "sockit"
version = "0.1.0"
description = ""
authors = ["boatx <1446337+boatx@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.2"}
pytest-cov = "^2.10.0"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-isort = "^3.0.1"
mypy = "^0.782"
pytype = {version = "^2020.7.14", python = "3.7"}
flake8-annotations = "^2.3.0"

[tool.black]
target-versions = "py37"
line-length = 80

[tool.coverage.run]
branch = true
source = ["sockit"]

[tool.coverage.report]
show_missing = true

[tool.isort]
known_first_party = ["sockit", "tests"]
default_section = "THIRDPARTY"
# black compatible settings
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
