[tool.poetry]
name = "sockit"
version = "0.1.0"
description = ""
authors = ["boatx <1446337+boatx@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.2"}
pytest-cov = "^2.10.0"
black = "^23.3.0"
flake8 = "^5.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-isort = "^6.0.0"
mypy = "^0.782"
pytype = {version = "^2020.7.14", python = "3.7"}
flake8-annotations = "^2.3.0"

[tool.black]
target-versions = "py37"
line-length = 79

[tool.coverage.run]
branch = true
source = ["sockit"]

[tool.coverage.report]
show_missing = true

[tool.isort]
known_first_party = ["sockit", "tests"]
default_section = "THIRDPARTY"
# black compatible settings
profile = "black"
line_length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
