[tool.poetry]
name = "sockit"
version = "0.1.0"
description = ""
authors = ["boatx <1446337+boatx@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^5.2"}
pytest-cov = "^2.10.0"
black = "^24.3.0"
flake8 = "^7.2.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.12.12"
flake8-isort = "^6.1.2"
mypy = "^1.16"
pytype = "^2024.09.13"
flake8-annotations = "^2.3.0"

[tool.black]
target-versions = "py39"
line-length = 79

[tool.coverage.run]
branch = true
source = ["sockit"]

[tool.coverage.report]
show_missing = true

[tool.isort]
known_first_party = ["sockit", "tests"]
default_section = "THIRDPARTY"
# black compatible settings
profile = "black"
line_length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
